--- a/workflow/DataProcessingScript.ipynb
+++ b/workflow/DataProcessingScript.ipynb
@@ -30,6 +30,49 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56c9876d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "import sys\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Locate LD_benchmark root and results directory for `today`\n",
+    "cwd = Path.cwd().resolve()\n",
+    "\n",
+    "def _find_ld_root(start: Path) -> Path:\n",
+    "    if (start / \"models\").is_dir() and (start / \"results\").is_dir():\n",
+    "        return start\n",
+    "    if (start / \"LD_benchmark\" / \"models\").is_dir():\n",
+    "        return start / \"LD_benchmark\"\n",
+    "    for parent in [start] + list(start.parents):\n",
+    "        if (parent / \"models\").is_dir() and (parent / \"results\").is_dir():\n",
+    "            return parent\n",
+    "        if (parent / \"LD_benchmark\" / \"models\").is_dir():\n",
+    "            return parent / \"LD_benchmark\"\n",
+    "    raise FileNotFoundError(f\"Cannot find LD_benchmark root from {start}\")\n",
+    "\n",
+    "ld_root = _find_ld_root(cwd)\n",
+    "results_day_dir = ld_root / \"results\" / today\n",
+    "results_day_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "def load_traj(traj_csv: Path):\n",
+    "    df = pd.read_csv(traj_csv)\n",
+    "    e_cols = [c for c in df.columns if c.startswith('e')]\n",
+    "    points = []\n",
+    "    for _, row in df.iterrows():\n",
+    "        coords = tuple(int(row[c]) for c in e_cols if pd.notna(row[c]))\n",
+    "        points.append(coords)\n",
+    "    return points\n",
+    "\n",
+    "print(\"LD_benchmark root:\", ld_root)\n",
+    "print(\"Results dir:\", results_day_dir)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "3102799c",
    "metadata": {},
@@ -44,20 +87,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Original data\n",
-    "ldbd_dantzig_points_20260216095139 = [(5, 1), (1, 5), (5, 4), (1, 2), (3, 3), (3, 4), (2, 3)]\n",
-    "# ldbd_pc_points = [(5, 1), (1, 5), (5, 4), (1, 2), (3, 3), (3, 4), (2, 3)]\n",
-    "ldbd_paper_points = [(5, 1), (1, 5), (4, 1), (2, 4), (2, 3), (3, 2), (2, 3)]\n",
-    "\n",
-    "ldsda_dantzig_points_20260216095139 = [(5, 1), (4, 2), (4,3)]\n",
-    "# ldsda_pc_points = [(5, 1), (4, 2), (4,3)]\n",
-    "ldsda_paper_points = [(5, 1), (4, 2), (4,3)]\n",
-    "\n",
-    "# Check and create the folder if it does not exist\n",
+    "# Load trajectories produced by ModelTestingScript into variables used for plotting\n",
     "import os\n",
-    "folder_path = fr\"D:\\Data\\Proj\\SECQUOIA\\Pyomos\\LD_benchmark\\results\\{today}\"\n",
-    "if not os.path.exists(folder_path):\n",
-    "    os.makedirs(folder_path)"
+    "\n",
+    "folder_path = results_day_dir\n",
+    "os.makedirs(folder_path, exist_ok=True)\n",
+    "\n",
+    "# Toy problem: 2D trajectories\n",
+    "ldbd_toy_points = load_traj(folder_path / \"toy\" / \"ldbd\" / \"traj.csv\")\n",
+    "ldsda_toy_points = load_traj(folder_path / \"toy\" / \"ldsda\" / \"traj.csv\")\n",
+    "\n",
+    "print(\"Toy traj lengths:\", len(ldbd_toy_points), len(ldsda_toy_points))"
    ]
   },
   {
@@ -196,13 +236,8 @@
    ],
    "source": [
     "import os\n",
-    "plot_point_sequence(ldbd_dantzig_points_20260216095139, os.path.join(folder_path, f\"ldbd_dantzig_points_{today}.png\"), title=\"LDBD Points Dantzig \")\n",
-    "# plot_point_sequence(ldbd_pc_points, os.path.join(folder_path, f\"ldbd_pc_points_{today}.png\"), title=\"LDBD Points PC\")\n",
-    "plot_point_sequence(ldbd_paper_points, os.path.join(folder_path, f\"ldbd_paper_points_{today}.png\"), title=\"LDBD Points Paper\")\n",
-    "\n",
-    "plot_point_sequence(ldsda_dantzig_points_20260216095139, os.path.join(folder_path, f\"ldsda_dantzig_points_{today}.png\"), title=\"LDSDA Points Dantzig\")\n",
-    "# plot_point_sequence(ldsda_pc_points, os.path.join(folder_path, f\"ldsda_pc_points_{today}.png\"), title=\"LDSDA Points PC\")\n",
-    "plot_point_sequence(ldsda_paper_points, os.path.join(folder_path, f\"ldsda_paper_points_{today}.png\"), title=\"LDSDA Points Paper\")    \n"
+    "plot_point_sequence(ldbd_toy_points, os.path.join(folder_path, f\"toy_ldbd_traj_{today}.png\"), title=\"Toy Trajectory (LDBD)\")\n",
+    "plot_point_sequence(ldsda_toy_points, os.path.join(folder_path, f\"toy_ldsda_traj_{today}.png\"), title=\"Toy Trajectory (LDSDA)\")"
    ]
   },
   {
@@ -370,21 +405,14 @@
     }
    ],
    "source": [
-    "# ldbd_pc_points_sb = [(3, 3, 3), (3, 3, 1), (3, 1, 1), (1, 3, 1), (2, 3, 1), (2, 2, 1)]\n",
-    "ldbd_dantzig_points_sb = [(3, 3, 3), (3, 3, 1), (3, 1, 1), (1, 3, 1), (2, 3, 1), (2, 2, 1)]\n",
+    "# Load small-batch trajectories produced by ModelTestingScript\n",
+    "import os\n",
     "\n",
-    "# ldsdal2_pc_points_sb = [(3, 3, 3), (3, 3, 1), (2, 3, 1), (2, 2, 1)]\n",
-    "ldsdal2_dantzig_points_sb = [(3, 3, 3), (3, 3, 1), (2, 3, 1), (2, 2, 1)]\n",
-    "# ldsdalinf_pc_points_sb = [(3, 3, 3), (2, 2, 2), (2, 2, 1)]\n",
-    "ldsdalinf_dantzig_points_sb =[(3, 3, 3), (2, 2, 2), (2, 2, 1)]\n",
+    "ldbd_points_sb = load_traj(folder_path / \"small_batch\" / \"ldbd\" / \"traj.csv\")\n",
+    "ldsda_points_sb = load_traj(folder_path / \"small_batch\" / \"ldsda\" / \"traj.csv\")\n",
     "\n",
-    "# plot_3d_path_with_missing_nodes(df, ldbd_pc_points_sb, os.path.join(folder_path, f\"ldbd_pc_points_{today}_sb.png\"), title=\"LDBD PC Points Small Batch\")\n",
-    "plot_3d_path_with_missing_nodes(df, ldbd_dantzig_points_sb, os.path.join(folder_path, f\"ldbd_dantzig_points_{today}_sb.png\"), title=\"LDBD Dantzig Points Small Batch\")\n",
-    "\n",
-    "# plot_3d_path_with_missing_nodes(df, ldsdal2_pc_points_sb, os.path.join(folder_path, f\"lsdal2_pc_points_{today}_sb.png\"), title=\"LSDAL2 PC Points Small Batch\")\n",
-    "plot_3d_path_with_missing_nodes(df, ldsdal2_dantzig_points_sb, os.path.join(folder_path, f\"lsdal2_dantzig_points_{today}_sb.png\"), title=\"LSDAL2 Dantzig Points Small Batch\")\n",
-    "# plot_3d_path_with_missing_nodes(df, ldsdalinf_pc_points_sb, os.path.join(folder_path, f\"lsdalinf_pc_points_{today}_sb.png\"), title=\"LSDALinf PC Points Small Batch\")\n",
-    "plot_3d_path_with_missing_nodes(df, ldsdalinf_dantzig_points_sb, os.path.join(folder_path, f\"lsdalinf_dantzig_points_{today}_sb.png\"), title=\"LSDALinf Dantzig Points Small Batch\")\n"
+    "plot_3d_path_with_missing_nodes(df, ldbd_points_sb, os.path.join(folder_path, f\"small_batch_ldbd_traj_{today}.png\"), title=\"Small Batch Trajectory (LDBD)\")\n",
+    "plot_3d_path_with_missing_nodes(df, ldsda_points_sb, os.path.join(folder_path, f\"small_batch_ldsda_traj_{today}.png\"), title=\"Small Batch Trajectory (LDSDA)\")"
    ]
   },
   {
@@ -415,82 +443,73 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "from io import StringIO\n",
     "from matplotlib.ticker import MultipleLocator\n",
     "\n",
-    "# 1. Load data\n",
-    "csv_file = fr\"D:\\Data\\Proj\\SECQUOIA\\Pyomos\\test_ldbd_ldsda\\column_test\\column_results\\column_test_{today}.csv\"\n",
+    "# Load column summaries produced by ModelTestingScript\n",
+    "ldsda_csv = folder_path / \"column\" / \"ldsda\" / \"summary.csv\"\n",
+    "ldbd_csv = folder_path / \"column\" / \"ldbd\" / \"summary.csv\"\n",
     "\n",
-    "df = pd.read_csv(csv_file)\n",
+    "df_ldsda = pd.read_csv(ldsda_csv) if ldsda_csv.exists() else pd.DataFrame()\n",
+    "df_ldbd = pd.read_csv(ldbd_csv) if ldbd_csv.exists() else pd.DataFrame()\n",
     "\n",
-    "# Key change: filter out rows with missing objective_value so those points are not plotted\n",
-    "df_clean = df.dropna(subset=['objective_value'])\n",
+    "df = pd.concat([df_ldsda, df_ldbd], ignore_index=True)\n",
+    "if df.empty:\n",
+    "    raise FileNotFoundError(\"No column summary.csv found under results/<today>/column/<algo>/summary.csv\")\n",
     "\n",
-    "# 2. Plot styling and configuration\n",
+    "# Keep only the columns we need for plotting\n",
+    "df = df.rename(columns={\"cpu_time_s\": \"cpu_time\"})\n",
+    "df_clean = df.dropna(subset=[\"objective_value\"])\n",
+    "\n",
     "style_map = {\n",
-    "    'LDSDA': {'marker': '*', 'color': 'red', 'label': 'LD-SDA'},\n",
-    "    'LDBD': {'marker': 's', 'color': 'black', 'label': 'LD-BD', 'fillstyle': 'none'},\n",
-    "    'LOA': {'marker': '^', 'color': 'blue', 'label': 'L-OA', 'fillstyle': 'none'}\n",
+    "    \"LDSDA\": {\"marker\": \"*\", \"color\": \"red\", \"label\": \"LD-SDA\"},\n",
+    "    \"LDBD\": {\"marker\": \"s\", \"color\": \"black\", \"label\": \"LD-BD\", \"fillstyle\": \"none\"},\n",
     "}\n",
     "\n",
     "fig, (ax1, ax2) = plt.subplots(2, 1, figsize=(12, 8), sharex=True)\n",
     "\n",
-    "# 3. Plot helper (reduces repeated code)\n",
     "def plot_data(ax, y_col, is_top=False):\n",
-    "    for alg in df_clean['Algorithm'].unique():\n",
-    "        subset = df_clean[df_clean['Algorithm'] == alg]\n",
-    "        style = style_map.get(alg, {'marker': 'o', 'color': 'gray'})\n",
-    "        \n",
-    "        ax.scatter(subset['initial_point_key'], subset[y_col], \n",
-    "                   marker=style['marker'], color=style['color'], \n",
-    "                   label=style.get('label') if is_top else None, s=80, \n",
-    "                   facecolors=style['color'] if 'fillstyle' not in style else 'none')\n",
+    "    for alg in df_clean[\"algorithm\"].unique():\n",
+    "        subset = df_clean[df_clean[\"algorithm\"] == alg]\n",
+    "        style = style_map.get(alg, {\"marker\": \"o\", \"color\": \"gray\"})\n",
+    "        ax.scatter(\n",
+    "            subset[\"initial_point_key\"],\n",
+    "            subset[y_col],\n",
+    "            marker=style[\"marker\"],\n",
+    "            color=style[\"color\"],\n",
+    "            label=style.get(\"label\") if is_top else None,\n",
+    "            s=80,\n",
+    "            facecolors=style[\"color\"] if \"fillstyle\" not in style else \"none\",\n",
+    "        )\n",
     "\n",
-    "plot_data(ax1, 'objective_value', is_top=True)\n",
-    "plot_data(ax2, 'cpu_time')\n",
+    "plot_data(ax1, \"objective_value\", is_top=True)\n",
+    "plot_data(ax2, \"cpu_time\")\n",
     "\n",
-    "# 4. Grid and ticks\n",
+    "max_key = int(df_clean[\"initial_point_key\"].max()) if \"initial_point_key\" in df_clean else 0\n",
+    "xmax = max(10, max_key + 1)\n",
+    "\n",
     "for ax in [ax1, ax2]:\n",
-    "    # Major ticks: show a number every 5\n",
     "    ax.xaxis.set_major_locator(MultipleLocator(5))\n",
-    "    # Minor ticks: one per grid point (1, 2, 3...), but no labels\n",
     "    ax.xaxis.set_minor_locator(MultipleLocator(1))\n",
-    "    \n",
-    "    # Draw grids for both major and minor ticks\n",
-    "    # Major grid slightly thicker; minor grid dotted\n",
-    "    ax.grid(which='major', linestyle='-', linewidth=0.5, alpha=0.5)\n",
-    "    ax.grid(which='minor', linestyle=':', linewidth=0.5, alpha=0.3)\n",
-    "    \n",
-    "    # Axis range\n",
-    "    ax.set_xlim(0, 64)\n",
+    "    ax.grid(which=\"major\", linestyle=\"-\", linewidth=0.5, alpha=0.5)\n",
+    "    ax.grid(which=\"minor\", linestyle=\":\", linewidth=0.5, alpha=0.3)\n",
+    "    ax.set_xlim(0, xmax)\n",
     "\n",
-    "# 5. Finishing touches\n",
-    "ax1.tick_params(axis='y', direction='in', labelsize=16)\n",
+    "ax1.tick_params(axis=\"y\", direction=\"in\", labelsize=16)\n",
+    "ax1.set_ylabel(\"Objective function\", fontsize=16)\n",
+    "for s in ax1.spines.values():\n",
+    "    s.set_linewidth(1.5)\n",
+    "ax1.set_title(\"(A)\", loc=\"left\", fontweight=\"bold\")\n",
+    "ax1.legend(loc=\"upper right\", ncol=2)\n",
     "\n",
-    "ax1.set_ylabel('Objective function', fontsize=16)\n",
+    "ax2.tick_params(axis=\"x\", direction=\"in\", labelsize=16)\n",
+    "ax2.tick_params(axis=\"y\", direction=\"in\", labelsize=16)\n",
+    "for s in ax2.spines.values():\n",
+    "    s.set_linewidth(1.5)\n",
+    "ax2.set_ylabel(\"CPU time [s]\", fontsize=16)\n",
+    "ax2.set_xlabel(\"Initial guess of external variables\", fontsize=16)\n",
+    "ax2.set_title(\"(B)\", loc=\"left\", fontweight=\"bold\")\n",
     "\n",
-    "ax1.spines['top'].set_linewidth(1.5)\n",
-    "ax1.spines['right'].set_linewidth(1.5)\n",
-    "ax1.spines['bottom'].set_linewidth(1.5)\n",
-    "ax1.spines['left'].set_linewidth(1.5)\n",
-    "ax1.set_title('(A)', loc='left', fontweight='bold')\n",
-    "ax1.legend(loc='upper right', ncol=3)\n",
-    "\n",
-    "# Adjust the size of the x ticks and labels inward\n",
-    "ax2.tick_params(axis='x',direction='in', labelsize=16)\n",
-    "ax2.tick_params(axis='y', direction='in', labelsize=16)\n",
-    "\n",
-    "# Adjust axis line thickness\n",
-    "ax2.spines['top'].set_linewidth(1.5)\n",
-    "ax2.spines['right'].set_linewidth(1.5)\n",
-    "ax2.spines['bottom'].set_linewidth(1.5)\n",
-    "ax2.spines['left'].set_linewidth(1.5)\n",
-    "ax2.set_ylabel('CPU time [s]', fontsize=16)\n",
-    "ax2.set_xlabel('Initial guess of external variables', fontsize=16)\n",
-    "ax2.set_title('(B)', loc='left', fontweight='bold')\n",
-    "\n",
-    "# Special: force tick 1 to appear\n",
-    "xticks = [1] + list(range(5, 65, 5))\n",
+    "xticks = [1] + list(range(5, xmax + 1, 5))\n",
     "ax2.set_xticks(xticks)\n",
     "\n",
     "plt.tight_layout()\n",
@@ -867,6 +886,32 @@
     "    plt.show()\n",
     "\n",
     "# Test call\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30637c70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "\n",
+    "NT = 25  # choose one from [5, 10, 15, 20, 25, 30]\n",
+    "cstr_ldbd_traj = load_traj(folder_path / \"cstr\" / f\"NT{NT}\" / \"ldbd\" / \"traj.csv\")\n",
+    "cstr_ldsda_traj = load_traj(folder_path / \"cstr\" / f\"NT{NT}\" / \"ldsda\" / \"traj.csv\")\n",
+    "\n",
+    "plot_point_sequence(cstr_ldbd_traj, os.path.join(folder_path, f\"cstr_NT{NT}_ldbd_traj_{today}.png\"), title=f\"CSTR NT={NT} (LDBD)\")\n",
+    "plot_point_sequence(cstr_ldsda_traj, os.path.join(folder_path, f\"cstr_NT{NT}_ldsda_traj_{today}.png\"), title=f\"CSTR NT={NT} (LDSDA)\")\n",
+    "\n",
+    "# Print CPU/wall time summary for this NT\n",
+    "sum_ldbd = folder_path / \"cstr\" / f\"NT{NT}\" / \"ldbd\" / \"summary.csv\"\n",
+    "sum_ldsda = folder_path / \"cstr\" / f\"NT{NT}\" / \"ldsda\" / \"summary.csv\"\n",
+    "if sum_ldbd.exists():\n",
+    "    display(pd.read_csv(sum_ldbd))\n",
+    "if sum_ldsda.exists():\n",
+    "    display(pd.read_csv(sum_ldsda))"
    ]
   }
  ],
