--- a/workflow/ModelTestingScript.ipynb
+++ b/workflow/ModelTestingScript.ipynb
@@ -23,6 +23,92 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d2457df4",
+   "metadata": {},
+   "source": [
+    "## Run LD-SDA / LD-BD Benchmarks\n",
+    "This notebook runs the 4 model benchmarks (toy, small-batch, CSTR, column) for both `gdpopt.ldsda` and `gdpopt.ldbd` with a shared configuration, and saves results under `LD_benchmark/results/<YYYYMMDD>/` (summary CSV, traj CSV, solver log)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dfe94e59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "import sys\n",
+    "\n",
+    "# Locate LD_benchmark root and put it on sys.path so we can `import workflow.*`\n",
+    "cwd = Path.cwd().resolve()\n",
+    "\n",
+    "def _find_ld_root(start: Path) -> Path:\n",
+    "    if (start / \"models\").is_dir() and (start / \"results\").is_dir():\n",
+    "        return start\n",
+    "    if (start / \"LD_benchmark\" / \"models\").is_dir():\n",
+    "        return start / \"LD_benchmark\"\n",
+    "    for parent in [start] + list(start.parents):\n",
+    "        if (parent / \"models\").is_dir() and (parent / \"results\").is_dir():\n",
+    "            return parent\n",
+    "        if (parent / \"LD_benchmark\" / \"models\").is_dir():\n",
+    "            return parent / \"LD_benchmark\"\n",
+    "    raise FileNotFoundError(f\"Cannot find LD_benchmark root from {start}\")\n",
+    "\n",
+    "ld_root = _find_ld_root(cwd)\n",
+    "if str(ld_root) not in sys.path:\n",
+    "    sys.path.insert(0, str(ld_root))\n",
+    "\n",
+    "# Also add local Pyomo source tree if present (repo layout: <workspace>/pyomo/pyomo/...)\n",
+    "pyomo_src = ld_root.parent / \"pyomo\"\n",
+    "if (pyomo_src / \"pyomo\").is_dir() and str(pyomo_src) not in sys.path:\n",
+    "    sys.path.insert(0, str(pyomo_src))\n",
+    "\n",
+    "results_day_dir = ld_root / \"results\" / today\n",
+    "results_day_dir.mkdir(parents=True, exist_ok=True)\n",
+    "print(\"LD_benchmark root:\", ld_root)\n",
+    "print(\"Pyomo src:\", pyomo_src if (pyomo_src / \"pyomo\").is_dir() else \"(not found)\")\n",
+    "print(\"Results dir:\", results_day_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "975149f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from workflow.benchmark_suite import CommonConfig, run_all\n",
+    "\n",
+    "# Common configuration shared by LDSDA and LDBD\n",
+    "common = CommonConfig(\n",
+    "    tee=False,\n",
+    "    time_limit=900,\n",
+    "    direction_norm=\"Linf\",\n",
+    "    nlp_solver=\"ipopt\",\n",
+    "    mip_solver=\"gurobi\",\n",
+    "    separation_solver=\"gurobi\",\n",
+    ")\n",
+    "\n",
+    "# Required CSTR sizes\n",
+    "cstr_NT_list = [5, 10, 15, 20, 25, 30]\n",
+    "\n",
+    "# Column random init: set to None to run ALL keys in models/column/column_initial_test.py\n",
+    "# Default here is a small subset to keep the benchmark runtime manageable.\n",
+    "column_keys = list(range(1, 11))\n",
+    "\n",
+    "run_all(\n",
+    "    date_results_dir=results_day_dir,\n",
+    "    common=common,\n",
+    "    cstr_NT_list=cstr_NT_list,\n",
+    "    column_keys=column_keys,\n",
+    " )\n",
+    "\n",
+    "print(\"Done. Results written under:\", results_day_dir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b66b00c4",
    "metadata": {},
    "source": [
