--- a/workflow/DataProcessingScript.ipynb
+++ b/workflow/DataProcessingScript.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "10a209b5",
    "metadata": {},
    "outputs": [
@@ -18,7 +18,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20260224\n"
+      "20260225\n"
      ]
     }
    ],
@@ -31,10 +31,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "56c9876d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LD_benchmark root: D:\\Data\\Proj\\SECQUOIA\\Pyomos\\LD_benchmark\n",
+      "Results dir: D:\\Data\\Proj\\SECQUOIA\\Pyomos\\LD_benchmark\\results\\20260225\n"
+     ]
+    }
+   ],
    "source": [
     "from pathlib import Path\n",
     "import sys\n",
