Update run all with only one algorithm

--- a/workflow/ModelTestingScript.ipynb
+++ b/workflow/ModelTestingScript.ipynb
@@ -376,9 +376,10 @@
     "    common=common,\n",
     "    cstr_NT_list=cstr_NT_list,\n",
     "    column_keys=column_keys,\n",
+    "    algorithms=algorithms,\n",
     " )\n",
     "\n",
-    "print(\"All benchmarks done. Results written under:\", results_day_dir)"
+    "print(\"All benchmarks done. Results written under:\", results_day_dir)\n"
    ]
   },
   {
