Update column test configuations

--- a/workflow/ModelTestingScript.ipynb
+++ b/workflow/ModelTestingScript.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "975149f4",
    "metadata": {},
    "outputs": [
@@ -106,20 +106,9 @@
     }
    ],
    "source": [
-    "from __future__ import annotations\n",
-    "from pathlib import Path\n",
     "import shutil\n",
+    "from workflow.benchmark_suite import CommonConfig\n",
     "\n",
-    "from workflow.benchmark_suite import (\n",
-    "    CommonConfig,\n",
-    "    run_toy,\n",
-    "    run_small_batch,\n",
-    "    run_cstr,\n",
-    "    run_column_random_init,\n",
-    "    run_all,\n",
-    " )\n",
-    "\n",
-    "# Common configuration shared by LDSDA and LDBD\n",
     "common = CommonConfig(\n",
     "    tee=False,\n",
     "    time_limit=900,\n",
@@ -128,17 +117,19 @@
     "    mip_solver=\"gurobi\",\n",
     "    separation_solver=\"gurobi\",\n",
     "    minlp_solver=\"gams\",\n",
-    " )\n",
+    ")\n",
     "\n",
-    "# Full solver names (as you clarified)\n",
+    "# Full GDPopt solver names (these are written into artifacts as the algorithm ID)\n",
     "algorithms = (\"gdpopt.ldsda\", \"gdpopt.ldbd\")\n",
     "\n",
     "# Required CSTR sizes\n",
     "cstr_NT_list = [5, 10, 15, 20, 25, 30]\n",
     "\n",
-    "# Column random init: set to None to run ALL keys in models/column/column_initial_test.py\n",
-    "# Default here is a small subset to keep the benchmark runtime manageable.\n",
-    "column_keys = list(range(1, 11))\n",
+    "# Column random init:\n",
+    "# - set to None to run ALL keys in models/column/column_initial_test.py\n",
+    "# - set to a list to restrict (e.g., list(range(1, 11)))\n",
+    "column_keys = None\n",
+    "\n",
     "\n",
     "def clear_results(subdir: str | Path) -> Path:\n",
     "    \"\"\"Delete `results_day_dir/subdir` if it exists; returns the target path.\"\"\"\n",
@@ -148,9 +139,10 @@
     "    target.mkdir(parents=True, exist_ok=True)\n",
     "    return target\n",
     "\n",
+    "\n",
     "print(\"Configured.\")\n",
     "print(\"Results day dir:\", results_day_dir)\n",
-    "print(\"Algorithms:\", algorithms)"
+    "print(\"Algorithms:\", algorithms)\n"
    ]
   },
   {
