Update default gams solver

--- a/workflow/ModelTestingScript.ipynb
+++ b/workflow/ModelTestingScript.ipynb
@@ -109,6 +109,14 @@
     "import shutil\n",
     "from workflow.benchmark_suite import CommonConfig\n",
     "\n",
+    "# If you are using MINLP subproblems via GAMS, you can select the underlying\n",
+    "# MINLP solver and pass options through `minlp_solver_args`, for example:\n",
+    "#   minlp_solver_args = dict(\n",
+    "#       solver=\"baron\",\n",
+    "#       add_options=[\"option optcr=0.0001;\"],\n",
+    "#   )\n",
+    "minlp_solver_args = None\n",
+    "\n",
     "common = CommonConfig(\n",
     "    tee=False,\n",
     "    time_limit=900,\n",
@@ -117,6 +125,7 @@
     "    mip_solver=\"gurobi\",\n",
     "    separation_solver=\"gurobi\",\n",
     "    minlp_solver=\"gams\",\n",
+    "    minlp_solver_args=minlp_solver_args,\n",
     ")\n",
     "\n",
     "# Full GDPopt solver names (these are written into artifacts as the algorithm ID)\n",
